Filtering and retrieving data

--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -9,5 +9,11 @@
     {% else %}
     <h1>Hello World</h1>
     {% endif %}
+    <h2>Products List</h2>
+    <ul>
+      {% for product in products %}
+      <li>{{product.title}}</li>
+      {% endfor %}
+    </ul>
   </body>
 </html>
