--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -12,7 +12,7 @@
     <h2>Products List</h2>
     <ul>
       {% for product in products %}
-      <li>{{product.title}}</li>
+      <li>{{product}}</li>
       {% endfor %}
     </ul>
   </body>
