--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -8,13 +8,14 @@
     <h1>Hello {{name}}</h1>
     {% else %}
     <h1>Hello World</h1>
-    {% endif %}
+    {% endif %} {% comment %}
     <h2>Products List</h2>
     <ul>
       {% for product in products %}
       <li>{{product}}</li>
       {% endfor %}
     </ul>
+    {% endcomment %}
     <h2>count: {{ result}}</h2>
   </body>
 </html>
